add config, env

--- a/config_cobra.json
+++ b/config_cobra.json
@@ -4,6 +4,7 @@
         "modelExtURL": "",
         "modelIntURL": "",
         "envURL": "",
+		"IBLURL": "https://raw.githubusercontent.com/sylvain-d-guimond/public_content/main/autoshop.env",
 		"useSceneLoader": false
     },
     "variants": {
