--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
         "modelExtURL": "https://dl.dropbox.com/s/e6bw8192gs70yqz/Scene_Setup_for_WebGL_Ext.gltf",
         "modelIntURL": "https://dl.dropbox.com/s/c7w5t15hnm9f2vz/Scene_Setup_for_WebGL_Int.gltf",
         "envURL": "https://dl.dropbox.com/s/3iqff7cqlzi0w86/Scene_Setup_for_WebGL_Env.glb",
-        "IBLURL": "data/autoshop.env",
+        "IBLURL": "https://dl.dropbox.com/s/r8t8psdn1u7ysy7/autoshop.env",
 		"useSceneLoader": true
     },
     "variants": {
