--- a/config.json
+++ b/config.json
@@ -2,10 +2,10 @@
     "paths": {
         "camerasURL": "https://dl.dropbox.com/s/yj268v7dbzl0adc/Scene_Setup_for_WebGL_Camsv2.glb",
         "modelExtURL": "https://dl.dropbox.com/s/e6bw8192gs70yqz/Scene_Setup_for_WebGL_Ext.gltf",
-        "modelIntURL": "https://dl.dropbox.com/s/c7w5t15hnm9f2vz/Scene_Setup_for_WebGL_Int.gltf",
+        "modelIntURL": "https://dl.dropbox.com/s/ik61v38zbnpex09/Scene_Setup_for_WebGL_Int.glb",
         "envURL": "https://dl.dropbox.com/s/3iqff7cqlzi0w86/Scene_Setup_for_WebGL_Env.glb",
         "IBLURL": "https://dl.dropbox.com/s/r8t8psdn1u7ysy7/autoshop.env",
-		"useSceneLoader": true
+        "useSceneLoader": true
     },
     "variants": {
         "base": "Variant_",
